# svae-control

./: .gitignore  README.md  mypy.ini  pyproject.toml
src/svae_control/: config.py  network.py  registry.py  run.py  svae.py  train.py
src/svae_control/notebooks/corrupted_image_observations/: corrupted_image_observations_config_seed_1.yaml  corrupted_image_observations_config_seed_2_dim_10.yaml  corrupted_image_observations_config_seed_2_dim_16.yaml  corrupted_image_observations_config_seed_2_dim_5.yaml  svae_test-Copy1.ipynb  svae_test-c-image.ipynb  svae_test-vary-K.ipynb  svae_test.ipynb
src/svae_control/notebooks/image_observations/: image_observations_config_seed_0.yaml  image_observations_config_seed_1_dim_10.yaml  image_observations_config_seed_1_dim_16.yaml  image_observations_config_seed_1_dim_5.yaml  image_observations_config_seed_2.yaml  svae_test-vary-K.ipynb  svae_test.ipynb
src/svae_control/notebooks/noisy_locations/: noisy_observations_config_seed_0.yaml  noisy_observations_config_seed_1.yaml  noisy_observations_config_seed_2.yaml  noisy_observations_config_seed_2_dim_10.yaml  noisy_observations_config_seed_2_dim_16.yaml  noisy_observations_config_seed_2_dim_5.yaml  svae_test-vary-K.ipynb  svae_test.ipynb
src/svae_control/notebooks/plots/: svae-qualitative-trajectories.ipynb  svae_time_elapsed_by_k.ipynb
src/svae_control/notebooks/sensor_observations/: sensor_observations_config_seed_0.yaml  svae_test-vary-K.ipynb  (+6 more)
src/svae_control/utils/: dataclass_utils.py  kernel_ridge.py  setup_utils.py  utils.py
src/svae_control/yaml_configs/: TEMPLATE.yaml
(+58 files in other folders)
